# terminal-f

./: .gitignore  README.md  goal-prompt.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
docs/: ADR-001-backend-owned-session-registry.md  ADR-002-workspace-keep-alive.md  ADR-003-output-capture-vs-visual-snapshot.md  ADR-004-backpressure-ring-buffer.md  ADR-005-live-pty-memory-policy.md  ADR-006-injection-safety.md  ADR-007-automation-rule-engine.md  ADR-008-control-api-named-pipe.md  ADR-009-project-templates.md  ADR-010-image-paste-bridge.md  ADR-011-shell-integration-live-cwd.md  ADR-012-url-open-security.md  ARCHITECTURE.md  BENCHMARK.md  DEVELOPMENT.md  GUIDE-command-palette.md  GUIDE-features-easy.md  PLAN-M1-M2-roadmap.md  PLAN-UX-polish.md
examples/broker-git-review/: README.md  index.mjs
examples/templates/: README.md  ai-pair-dev.json
src/: autotest.ts  commands.ts  ipc.ts  main.ts  modal.ts  palette.ts  renderer.ts  sidebar.ts  styles.css  terms.ts  themes.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  automation.rs  commands.rs  config.rs  layout.rs  lib.rs  main.rs  model.rs  output.rs  paste.rs  pipe.rs  session.rs  shellint.rs  spool.rs  state.rs  template.rs
src-tauri/tests/: pipe_smoke.rs  pty_smoke.rs
