[package]
name = "terminal-f"
version = "0.1.1"
description = "Windows native terminal emulator core (M0)"
edition = "2021"
default-run = "terminal-f"

[lib]
name = "terminal_f_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
which = "7"
sysinfo = "0.33"
interprocess = "2"
base64 = "0.22"
arboard = "3"
png = "0.17"
tauri-plugin-opener = "2"

[[bin]]
name = "terminal-f"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[profile.release]
codegen-units = 1
lto = true
